updated site view

--- a/flask_http/templates/base.html
+++ b/flask_http/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>!!!best url shorter!!!</title>
+    <title>Url Shorter</title>
 </head>
 <body>
   <div class="container">
