--- a/flask_http/templates/output_short_url.html
+++ b/flask_http/templates/output_short_url.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-            <form method="post">
-              <div class="mb-3">
-                Вот ваша короткая ссылка: {{token}}
-              </div>
-              <div class="text-center">
-                <a href="/">Назад</a>
-              </div>
-            </form>
+    <form action="/" method="post">
+      <label for="longurl" style="font-size: 1.2em; line-height: 1.6;">Введите ссылку для сокращения: </label>
+      <input type="text" id="longurl" name="longurl" style="font-size: 1.2em; line-height: 1.6; height: 30px;">
+      <input type="submit" value="Сократить" style="font-size: 1.2em; line-height: 1.6; height: 36px;">
+        <div class="mb-3" style="font-size: 1.2em; line-height: 3.0;">
+                Короткая ссылка: {{token}}
+        </div>
+    </form>
 {% endblock %}
