--- a/flask_http/templates/input_long_url.html
+++ b/flask_http/templates/input_long_url.html
@@ -2,8 +2,8 @@
 
 {% block content %}
     <form action="/" method="post">
-      <label for="longurl">Введите ссылку, которую хотите сократить: </label>
-      <input type="text" id="longurl" name="longurl">
-      <input type="submit" value="сократить">
+      <label for="longurl" style="font-size: 1.2em; line-height: 1.6;">Введите ссылку для сокращения: </label>
+      <input type="text" id="longurl" name="longurl" style="font-size: 1.2em; line-height: 1.6; height: 30px;">
+      <input type="submit" value="Сократить" style="font-size: 1.2em; line-height: 1.6; height: 36px;">
     </form>
 {% endblock %}
