--- a/flask_http/templates/output_short_url.html
+++ b/flask_http/templates/output_short_url.html
@@ -6,7 +6,11 @@
       <input type="text" id="longurl" name="longurl" style="font-size: 1.2em; line-height: 1.6; height: 30px;">
       <input type="submit" value="Сократить" style="font-size: 1.2em; line-height: 1.6; height: 36px;">
         <div class="mb-3" style="font-size: 1.2em; line-height: 3.0;">
-                Короткая ссылка: {{token}}
+                Короткая ссылка: {{short_url}}
         </div>
+        <div class="mb-3" style="font-size: 1.2em; line-height: 2.0;">
+                QR-код:
+        </div>
+        <img src="/static/{{token}}.png" width="100" height="100">
     </form>
 {% endblock %}
