+ button "На главную" & "Статистика"

--- a/flask_http/templates/check_url.html
+++ b/flask_http/templates/check_url.html
@@ -6,4 +6,9 @@
       <input type="text" id="shorturl" name="shorturl" style="font-size: 1.2em; line-height: 1.6; height: 30px;">
       <input type="submit" value="Узнать" style="font-size: 1.2em; line-height: 1.6; height: 36px;">
     </form>
+    <div style="position: fixed; bottom: 20px; left: 20px;">
+        <a href="/">
+            <button style="font-size: 1.2em; line-height: 1.6; height: 36px;">На главную</button>
+        </a>
+    </div>
 {% endblock %}
