--- a/flask_http/templates/error_long_url_is_None.html
+++ b/flask_http/templates/error_long_url_is_None.html
@@ -9,5 +9,10 @@
                 Введена пустая ссылка
         </div>
     </form>
+    <div style="position: fixed; bottom: 20px; left: 20px;">
+        <a href="/check">
+            <button style="font-size: 1.2em; line-height: 1.6; height: 36px;">Статистика</button>
+        </a>
+    </div>
 
 {% endblock %}
