--- a/flask_http/templates/input_long_url.html
+++ b/flask_http/templates/input_long_url.html
@@ -6,4 +6,9 @@
       <input type="text" id="longurl" name="longurl" style="font-size: 1.2em; line-height: 1.6; height: 30px;">
       <input type="submit" value="Сократить" style="font-size: 1.2em; line-height: 1.6; height: 36px;">
     </form>
+    <div style="position: fixed; bottom: 20px; left: 20px;">
+        <a href="/check">
+            <button style="font-size: 1.2em; line-height: 1.6; height: 36px;">Статистика</button>
+        </a>
+    </div>
 {% endblock %}
