--- a/flask_http/templates/no_url.html
+++ b/flask_http/templates/no_url.html
@@ -9,5 +9,10 @@
                 Этой ссылки у нас нет
         </div>
     </form>
+    <div style="position: fixed; bottom: 20px; left: 20px;">
+        <a href="/">
+            <button style="font-size: 1.2em; line-height: 1.6; height: 36px;">На главную</button>
+        </a>
+    </div>
 
 {% endblock %}
