--- a/flask_http/templates/output_short_url.html
+++ b/flask_http/templates/output_short_url.html
@@ -13,4 +13,9 @@
         </div>
         <img src="/static/{{token}}.png" width="100" height="100">
     </form>
+    <div style="position: fixed; bottom: 20px; left: 20px;">
+        <a href="/check">
+            <button style="font-size: 1.2em; line-height: 1.6; height: 36px;">Статистика</button>
+        </a>
+    </div>
 {% endblock %}
