rename & +character limit for url input & fixed check_long_url func

--- a/flask_http/templates/base.html
+++ b/flask_http/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Url Shorter</title>
+    <title>Url Shortening Tool</title>
 </head>
 <body>
   <div class="container">
